# personal-trmnl

./: .gitignore  README.md  pyproject.toml  scrape_webcal.py
docs/plans/: 2026-04-30-icalendar-migration-design.md  2026-04-30-icalendar-migration.md
examples/: calendar_payload.json
plugins/: today_single_day.html  tomorrow_single_day.html
tests/: conftest.py  test_parse.py
tests/fixtures/edge_cases/: all_day.ics  cancellation_override.ics  dst_transition.ics  exdate_comma_list.ics  exdate_multi_line.ics  exdate_single.ics  floating_datetime.ics  folded_long_line.ics  modified_override.ics  multi_day_event.ics  rrule_count.ics  rrule_until.ics  rrule_until_and_count.ics  skip_keyword.ics  status_cancelled.ics  transp_transparent.ics
