[project]
name = "personal-trmnl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "N", "I", "TD", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"