[project]
name = "personal-trmnl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "icalendar>=7.1.0",
    "recurring-ical-events>=3.8.2",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "N", "I", "TD", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ['tests']
